src/components/movie-view/movie-view.scss
/* ... */
	//white container that holds the bottom movie description 
	#movie-view-section-bottom {
		background-color: white;
		// height: 100%;
		width: 100vw;
		max-width: 100vw;
		position: relative;
		left: 50vw;
		left: -50vw;
		margin-left: 50%;
		overflow-x: hidden;
	}

	//grey container that holds content in bottom section 
	#movie-description-section-bottom {
		background: #F5f5f5;
		width: 100vw;
		max-width: 100vw;
		position: relative;
		left: 50vw;
		left: -50vw;
		margin-left: 50%;
	}

	//css for movie case poster
	#movie-image {
		display: none;
	}

	//css for release date, rating, and movie length
	.movie-stats {
		color: #BDBDBD;
		font-size: 0.9em;
		padding: 15px;
		position: absolute;
		position: relative;
		bottom: 12px;
	}


	//movie description styling
	.movie-description {
		color: black;
		font-size: 1.1em;
	}

	//movie title style
	.title-style {
		font-size: 4vw;
		padding-left: 15px;
	}



	// //media queries for all screen size responsiveness

	@media (min-width: 576px) {

		// #col-remove {
		// 	flex: none;
		// }

		// .col {
		// 	flex: none;
		// }

		#movie-image {
			display: block;
		position: relative;
		top: 35px;
		width: 100%;
		height: 100%;
	}
	}

	@media (min-width: 521px) and (max-width: 575px) {

		.title-style {
			font-size: 4rem;
		}

		#movie-image {
			display: none;
		}

	.player-wrapper {
		width: 120%;
		height: 120%;
		position: absolute;
		position: relative;
		bottom: -30px;
		right: 50px;
	}

	#movie-content {
		position: absolute;
		position: relative;
		bottom: 40px;
	}

	.movie-details {
		position: absolute;
		position: relative;
		top: 30px;
		right: 30px;
	}

	#movie-view-section-top {
				padding: 40px;
	
			}

			.col {
				flex: none;
			}


			.movie-stats {
						font-size: 12px;
				position: absolute;
				position: relative;
				// right: 55px;
				top: -21px;
			}	

				.move-bookmark-mv {
						position: absolute;
						position: relative;
						width: 10vw;
						top: -1px;
				}

				#col-remove {
				flex: none;
				}
	}

	@media (min-width: 484px) and (max-width: 520px) {

		.title-style {
			font-size: 3.5rem;
		}

			.movie-stats {
				font-size: 12px;
		position: absolute;
		position: relative;
		// right: 55px;
		top: -21px;
	}	

	.movie-details {
		position: absolute;
		position: relative;
		top: 27px;
		right: 30px;
	}

		#movie-view-section-top {
			padding: 40px;

		}

		.move-bookmark-mv {
			position: absolute;
			position: relative;
			width: 10vw;
			top: -1px;
	}

		#col-remove {
			flex: none;
			}

			.player-wrapper {
				width: 120%;
				height: 120%;
				position: absolute;
				position: relative;
				bottom: -30px;
				right: 38px;
			}
		
			#movie-content {
				position: absolute;
				position: relative;
				bottom: 25px;
			}

		
	}

	@media (min-width: 389px) and (max-width: 485px) {

		.title-style {
			font-size: 3.5rem;
		}

			.movie-stats {
				font-size: 12.5px;
		position: absolute;
		position: relative;
		// right: 55px;
		top: -21px;
	}	

	.movie-details {
		position: absolute;
		position: relative;
		top: 27px;
		right: 30px;
	}

	#movie-content {
		position: absolute;
		position: relative;
		bottom: 25px;
	}

	.move-bookmark-mv {
		position: absolute;
		position: relative;
		width: 10vw;
		top: -1px;
	}

		#movie-view-section-top {
			padding: 40px;

		}

		#col-remove {
			flex: none;
			}

	.player-wrapper {
		width: 120%;
		height: 120%;
		position: absolute;
		position: relative;
		bottom: -30px;
		right: 40px;
	}


	}

	@media (min-width: 390px) and (max-width: 440px) {

		.title-style {
			font-size: 3.5rem;
		}

			.movie-stats {
				font-size: 12.5px;
		position: absolute;
		position: relative;
		// right: 55px;
		top: -21px;
	}	

	.movie-details {
		position: absolute;
		position: relative;
		top: 27px;
		right: 30px;
	}

	#movie-content {
		position: absolute;
		position: relative;
		bottom: 25px;
	}

	.move-bookmark-mv {
		position: absolute;
		position: relative;
		width: 10vw;
		top: -1px;
	}

		.player-wrapper {
			width: 120%;
			height: 120%;
			position: absolute;
			position: relative;
			bottom: -30px;
			right: 35px;
		}
	}

	#col-remove {
		flex: none;
		}

	@media (min-width: 364px) and (max-width: 390px) {

		.title-style {
			font-size: 3.3rem;
		}

			.movie-stats {
				font-size: 12.5px;
		position: absolute;
		position: relative;
		// right: 55px;
		top: -21px;
	}	

	.movie-details {
		position: absolute;
		position: relative;
		top: 27px;
		right: 30px;
	}

	#movie-content {
		position: absolute;
		position: relative;
		bottom: 25px;
	}

	.move-bookmark-mv {
		position: absolute;
		position: relative;
		width: 10vw;
		top: -1px;
	}

		.player-wrapper {
			width: 120%;
			height: 120%;
			position: absolute;
			position: relative;
			bottom: -30px;
			right: 30px;
		}
	
		#movie-view-section-top {
			padding: 40px;
		}

		#col-remove {
			flex: none;
			}
	}

	@media (min-width: 339px) and (max-width: 364px) {

		.title-style {
			font-size: 3rem;
		}

			.movie-stats {
				font-size: 12.5px;
		position: absolute;
		position: relative;
		// right: 55px;
		top: -21px;
	}	

	.movie-details {
		position: absolute;
		position: relative;
		top: 20px;
		right: 30px;
		transform: translate(0, 13px);
	}

	#movie-content {
		position: absolute;
		position: relative;
		bottom: 25px;
	}

	.move-bookmark-mv {
		position: absolute;
		position: relative;
		width: 10vw;
		top: -1px;
	}

		.player-wrapper {
			width: 120%;
			height: 120%;
			position: absolute;
			position: relative;
			bottom: -30px;
			right: 30px;
		}
	
	
		.movie-details {
			position: absolute;
			position: relative;
			top: 20px;
		}

		#movie-view-section-top {
			padding: 40px;

		}

		#col-remove {
			flex: none;
			}
	}
/* ... */

